--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.profiles.active=test
+
+default.sender=vinicius.da.silva.cruz.sanji@gmail.com
+default.recipient=vinicius.da.silva.cruz.sanji@gmail.com
