--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=vinicius.da.silva.cruz.sanji@gmail.com
 default.recipient=vinicius.da.silva.cruz.sanji@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=600000
+jwt.expiration=86400000
+
+aws.access_key_id=AKIAY5QQOGF2ZN5FOM6T
+aws.secret_access_key=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
+s3.bucket=curso-spring-completo
+s3.region=sa-east-1
