Ajustando o tamanho da imagem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ aws.access_key_id=AKIAY5QQOGF2ZN5FOM6T
 aws.secret_access_key=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
 s3.bucket=curso-spring-completo
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
+img.profile.size=200
